--- a/main page/main.html
+++ b/main page/main.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Main Page</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/main.js" defer></script>
   </head>
   <body>
-
+    <div id="intro">
+      <h1>Sam's Supernatural School Session</h1>
+      <p>School is boring but what if it wasn't? What if your days were filled with chaos as you were trying to pass your classes?</p>
+      <img src="img\temp.png">
+      <br><br>
+      <a href="../story/story.html"><button>Click here to start</a></button>
+    </div>
   </body>
 </html>
