--- a/story/story.html
+++ b/story/story.html
@@ -24,6 +24,6 @@
         <!-- 2 options: make an individual page for each event or figure out javascript that reacts with a button to change the page? more straightforward to do the first one tho-->
       </div>
     </div>
-    <a href="../main page/main.html"><button>Return to home</a></button>
+    <a href="../main.html"><button>Return to home</a></button>
   </body>
 </html>
