--- a/option-1/index.html
+++ b/option-1/index.html
@@ -13,8 +13,7 @@
         <p>Once upon a time there was a boy who went to school. This was no normal day at school. This boy had a super natural day at school with all sorts of wacky and interesting events happen. Can you help the boy survive his day at school?</p>
         <img id="story-img" src=img\skull.png>
       </div>
-      <a href="../main page/main.html"><button>Return to home</a></button>
+      <a href="../main.html"><button>Return to home</a></button>
     </div>
-    <a href="../main"
   </body>
 </html>
