story implementation and typed.js

--- a/main.html
+++ b/main.html
@@ -4,14 +4,20 @@
     <title>Main Page</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </head>
   <body>
     <div id="intro">
       <h1>Sam's Supernatural School Session</h1>
-      <p>School is boring but what if it wasn't? What if your days were filled with chaos as you were trying to pass your classes?</p>
+      <br><br>
+      <div id="typed-text">
+        <p>Sam's middle school mandates nap time during lunch, but Sam's not a fan. ^200He wants something a little more exciting, life-changing even. ^500But you should always be careful with what you wish for^300.^300.^300.</p>
+      </div>
+      <span id="typed"></span>
+      <br><br>
       <img src="img/temp.png">
       <br><br>
-      <a href="story/story.html"><button>Click here to start</a></button>
+      <a href="story/intro.html"><button>Click to see what happens</a></button>
     </div>
   </body>
 </html>
