--- a/story/intro.html
+++ b/story/intro.html
@@ -12,12 +12,12 @@
     <h1>Sam's Supernatural School Session</h1>
     <div id="body">
       <div class="story">
-        <div id="story-img"></div>
         <div id="story-text"></div>
         <span id="typed"></span>
         <div class="story-options"></div>
       </div>
-      <a href="../main.html"><button id="home">Return to home</a></button>
     </div>
+    </div>
+    <a href="../main.html"><button id="home">Return to home</a></button>
   </body>
 </html>
